--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "~7.14.0",
+    "eslint-config-prettier": "~6.15.0",
+    "eslint-plugin-jest": "~24.1.3",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-react": "~7.21.5",
+    "prettier": "~2.2.0"
   }
 }
