--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "~2.2.6",
     "d3-scale": "~3.2.3",
     "d3-shape": "~2.0.0",
+    "nanoid": "^3.1.18",
     "node-sass": "~4.14.1",
     "react": "^16.13.1",
     "react-charts": "~2.0.0-beta.7",
