--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "~0.21.0",
     "classnames": "~2.2.6",
     "d3-scale": "~3.2.3",
     "d3-shape": "~2.0.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "~10.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-jest": "~24.1.3",
